solutions/secure-authc/curl-customer-policy.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "curl-get-customer"
  namespace: "secure-authc"
spec:
  selector:
    matchLabels:
      app: customer
  rules:
  - from:
    - source:
        namespaces: ["curl"]
