solutions/secure-authc/recommendation-policy.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "get-recommendation"
spec:
  selector:
    matchLabels:
      app: recommendation
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/secure-authc/sa/preference-sa"]
    to:
    - operation:
        methods: ["GET"]
        ports: ["8080"]
